force-app/main/default/objects/Loan_Application__c/fields/Affordability_Score__c.field-meta.xml
<CustomField>
    <fullName>Affordability_Score__c</fullName>
    <label>Affordability Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>