force-app/main/default/objects/Loan_Application__c/fields/Affordability_Score_Updated__c.field-meta.xml
<CustomField>
    <fullName>Affordability_Score_Updated__c</fullName>
    <formula>IF(
  Declared_Monthly_Income__c &lt;= 0,
  0,
  Expected_Monthly_Repayment_Updated__c / Declared_Monthly_Income__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affordability Score Updated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>