force-app/main/default/objects/Loan_Application__c/fields/Affordability_Status__c.field-meta.xml
<CustomField>
    <fullName>Affordability_Status__c</fullName>
    <formula>IF(Affordability_Score_Updated__c &lt;= 0.40, &quot;PASS&quot;, &quot;FAIL&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Affordability Status</label>
    <type>Text</type>
</CustomField>