force-app/main/default/objects/Loan_Application__c/fields/Appraisal_Notes__c.field-meta.xml
<CustomField>
    <fullName>Appraisal_Notes__c</fullName>
    <label>Appraisal Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>