force-app/main/default/objects/Loan_Application__c/fields/Approval_Tier__c.field-meta.xml
<CustomField>
    <fullName>Approval_Tier__c</fullName>
    <inlineHelpText>Choose who must approve this loan application.</inlineHelpText>
    <label>Approval Tier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Branch Manager</fullName>
            </value>
            <value>
                <fullName>Head of Credit</fullName>
            </value>
            <value>
                <fullName>Head of Credit + CEO</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>