force-app/main/default/objects/Loan_Application__c/fields/Debt_To_Income_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Debt_To_Income_Ratio__c</fullName>
    <label>Debt To Income Ratio</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>