force-app/main/default/objects/Loan_Application__c/fields/Declared_Monthly_Income__c.field-meta.xml
<CustomField>
    <fullName>Declared_Monthly_Income__c</fullName>
    <formula>Customer__r.Monthly_Income__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is the customer&apos;s monthly income.</inlineHelpText>
    <label>Declared Monthly Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>