force-app/main/default/objects/Loan_Application__c/fields/Decline_Reason__c.field-meta.xml
<CustomField>
    <fullName>Decline_Reason__c</fullName>
    <label>Decline Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low Affordability</fullName>
            </value>
            <value>
                <fullName>Incomplete KYC</fullName>
            </value>
            <value>
                <fullName>Weak Repayment Source</fullName>
            </value>
            <value>
                <fullName>High Existing Debt</fullName>
            </value>
            <value>
                <fullName>Failed Field Verification</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>