force-app/main/default/objects/Loan_Application__c/fields/Expected_Monthly_Repayment__c.field-meta.xml
<CustomField>
    <fullName>Expected_Monthly_Repayment__c</fullName>
    <label>Expected Monthly Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>