force-app/main/default/objects/Loan_Application__c/fields/Expected_Monthly_Repayment_Updated__c.field-meta.xml
<CustomField>
    <fullName>Expected_Monthly_Repayment_Updated__c</fullName>
    <formula>(  Requested_Amount__c +  Total_Interest_Amount__c ) / ( Requested_Tenor__c / 30)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expected Monthly Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>