force-app/main/default/objects/Loan_Application__c/fields/Expected_Total_Fees__c.field-meta.xml
<CustomField>
    <fullName>Expected_Total_Fees__c</fullName>
    <label>Expected Total Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>