force-app/main/default/objects/Loan_Application__c/fields/Field_Visit_Completed__c.field-meta.xml
<CustomField>
    <fullName>Field_Visit_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Field Visit Completed</label>
    <type>Checkbox</type>
</CustomField>