force-app/main/default/objects/Loan_Application__c/fields/Loan_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Loan_Purpose__c</fullName>
    <label>Loan Purpose</label>
    <type>TextArea</type>
</CustomField>