force-app/main/default/objects/Loan_Application__c/fields/Month_Rate_Snapshot__c.field-meta.xml
<CustomField>
    <fullName>Month_Rate_Snapshot__c</fullName>
    <label>Monthly Rate Snapshot</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>