force-app/main/default/objects/Loan_Application__c/fields/Origination_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Origination_Fee_Amount__c</fullName>
    <formula>Requested_Amount__c  *  (  Loan_Product__r.Origination_Fee_Pct__c  / 100 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Origination Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>