force-app/main/default/objects/Loan_Application__c/fields/Purpose__c.field-meta.xml
<CustomField>
    <fullName>Purpose__c</fullName>
    <label>Purpose</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Working Capital</fullName>
            </value>
            <value>
                <fullName>Inventory Purchase</fullName>
            </value>
            <value>
                <fullName>Market Trading</fullName>
            </value>
            <value>
                <fullName>Equipment Purchase</fullName>
            </value>
            <value>
                <fullName>Shop Rent</fullName>
            </value>
            <value>
                <fullName>School Fees</fullName>
            </value>
            <value>
                <fullName>Medical Expenses</fullName>
            </value>
            <value>
                <fullName>Agriculture Input</fullName>
            </value>
            <value>
                <fullName>Cooperative Business Support</fullName>
            </value>
            <value>
                <fullName>Emergency Household Need</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>