force-app/main/default/objects/Loan_Application__c/fields/Recommended_By__c.field-meta.xml
<CustomField>
    <fullName>Recommended_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recommended By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Loan_Applications</relationshipName>
    <type>Lookup</type>
</CustomField>