force-app/main/default/objects/Loan_Application__c/fields/Repayment_Source__c.field-meta.xml
<CustomField>
    <fullName>Repayment_Source__c</fullName>
    <label>Repayment Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daily Sales</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Business Cashflow</fullName>
            </value>
            <value>
                <fullName>Cooperative Contributions</fullName>
            </value>
            <value>
                <fullName>Market Proceeds</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>