force-app/main/default/objects/Loan_Application__c/fields/Requested_Tenor__c.field-meta.xml
<CustomField>
    <fullName>Requested_Tenor__c</fullName>
    <inlineHelpText>Tenor in days</inlineHelpText>
    <label>Requested Tenor</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>