force-app/main/default/objects/Loan_Application__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Awaiting Docs</fullName>
            </value>
            <value>
                <fullName>Pending Appraisal</fullName>
            </value>
            <value>
                <fullName>In Appraisal</fullName>
            </value>
            <value>
                <fullName>Recommended for Approval</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Converted to Loan</fullName>
                <isActive>false</isActive>
                <label>Converted to Loan</label>
            </value>
            <value>
                <fullName>Recommended for Decline</fullName>
                <isActive>false</isActive>
                <label>Recommended for Decline</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>