force-app/main/default/objects/Loan_Application__c/fields/Supporting_Docs_Complete__c.field-meta.xml
<CustomField>
    <fullName>Supporting_Docs_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Supporting Docs Complete</label>
    <type>Checkbox</type>
</CustomField>