force-app/main/default/objects/Loan_Application__c/fields/Total_Cost_of_Loan__c.field-meta.xml
<CustomField>
    <fullName>Total_Cost_of_Loan__c</fullName>
    <formula>Requested_Amount__c +  Total_Interest_Amount__c +  Origination_Fee_Amount__c +  Insurance_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost of Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>