force-app/main/default/objects/Loan_Application__c/fields/Total_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Interest_Amount__c</fullName>
    <formula>Requested_Amount__c  *  (  Loan_Product__r.Monthly_Rate__c  / 100 )  *  (  Requested_Tenor__c  / 30 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Interest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>