force-app/main/default/objects/Loan_Application__c/validationRules/LS_Recommended_By_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>LS_Recommended_By_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  OR(
    ISPICKVAL(Status__c, &quot;Recommended for Approval&quot;),
    ISPICKVAL(Status__c, &quot;Approved&quot;)
  ),
  ISBLANK(Recommended_By__c)
)</errorConditionFormula>
    <errorDisplayField>Recommended_By__c</errorDisplayField>
    <errorMessage>Recommended By is required before recommendation or approval.</errorMessage>
</ValidationRule>