force-app/main/default/objects/Loan_Application__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Loan_Product__c</columns>
    <columns>Customer__c</columns>
    <columns>Status__c</columns>
    <columns>Requested_Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>