force-app/main/default/objects/Loan_Application__c/listViews/All_Submitted_Applications.listView-meta.xml
<ListView>
    <fullName>All_Submitted_Applications</fullName>
    <columns>NAME</columns>
    <columns>Loan_Product__c</columns>
    <columns>Customer__c</columns>
    <columns>Requested_Amount__c</columns>
    <columns>Requested_Tenor__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>All Submitted Applications</label>
</ListView>