force-app/main/default/objects/Loan_Application__c/listViews/Awaiting_My_Approval.listView-meta.xml
<ListView>
    <fullName>Awaiting_My_Approval</fullName>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Requested_Amount__c</columns>
    <columns>Requested_Tenor__c</columns>
    <columns>Recommended_By__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>Awaiting My Approval</label>
</ListView>