force-app/main/default/objects/Loan_Application__c/listViews/My_Active_Applications.listView-meta.xml
<ListView>
    <fullName>My_Active_Applications</fullName>
    <columns>Customer__c</columns>
    <columns>Requested_Amount__c</columns>
    <columns>Requested_Tenor__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Active Applications</label>
</ListView>