force-app/main/default/objects/Loan_Application__c/listViews/Pending_Appraisal.listView-meta.xml
<ListView>
    <fullName>Pending_Appraisal</fullName>
    <columns>NAME</columns>
    <columns>Loan_Product__c</columns>
    <columns>Customer__c</columns>
    <columns>Requested_Amount__c</columns>
    <columns>Requested_Tenor__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Pending Appraisal</value>
    </filters>
    <label>Pending Appraisal</label>
</ListView>